--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       .h1 {
         color: white;
         position: relative;
-        animation: slidein 2s ease-in;
+        animation: slidein 2.3s ease-out;
         margin-top: 25vh; /* Adjust this value to control vertical position */
       }
       @keyframes slidein {
