--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       @keyframes slidein {
         0% {
           transform: translateX(-100%);
+          font-size: 5px;
           opacity: 0;
         }
         100% {
           transform: translateX(0);
           opacity: 1;
+          font-size: 42px;
         }
       }
     </style>
