--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         position: relative;
         animation: slidein 2.3s ease-out;
         margin-top: 35vh; /* Adjust this value to control vertical position */
+        font-size: 24px
       }
       @keyframes slidein {
         0% {
@@ -26,7 +27,7 @@
         100% {
           transform: translateX(0);
           opacity: 1;
-          font-size: 42px;
+          font-size: 24px;
         }
       }
     </style>
