--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         position: relative;
         animation: slidein 2.3s ease-out;
         margin-top: 50vh; /* Adjust this value to control vertical position */
-        font-size: 24px
+        font-size: 24px;
       }
       @keyframes slidein {
         0% {
