--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
         margin: 0px;
         background: #000002;
         display: flex;
-        justify-content: center; /* Center horizontally */
-        align-items: flex-start; /* Align to the top vertically */
+        justify-content: center;
+        align-items: flex-start;
       }
       .h1 {
         color: white;
         position: relative;
         animation: slidein 2.3s ease-out;
-        margin-top: 20vh; /* Adjust this value to control vertical position */
+        margin-top: 20vh;
+      }
+      .cap {
+        color: white;
       }
       @keyframes slidein {
         0% {
@@ -32,6 +35,13 @@
   <body>
     <div class="h1">
       <h1>Chain pumps in the Han Dynasty</h1>
+    </div>
+    <div class="imagecap">
+      <img src="https://ia601300.us.archive.org/25/items/img-0714_20250305/IMG_0714.jpeg" alt="Workers operating a chain pump">
+    </img>
+    </div>
+    <div class="cap">
+      <p>Workers operating a chain pump.</p>
     </div>
   </body>
 </html>
