--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         flex-direction: column;
         align-items: flex-end; /* Align image and caption to the right */
         margin-top: 20px; /* Add space between title and image */
-        animation: a 2s ease-out;
+        animation: a 2.5s ease-out;
       }
       .cap {
         color: white;
         text-align: right; /* Align caption text to the right */
         margin-top: 5px; /* Add space between image and caption */
-        animation: a 2s ease-out;
+        animation: a 2.5s ease-out;
         margin-right: 4px;
       }
       img {
@@ -62,6 +62,9 @@
     <div class="h1">
       <h1>Chain pumps in the Han Dynasty</h1>
     </div>
+    <div class="what">
+      <h2>What is the chain pump?</h2>
+      <p>Chain pumps is totally my new invention.</p>
     <div class="imagecap">
       <img src="https://ia601300.us.archive.org/25/items/img-0714_20250305/IMG_0714.jpeg" alt="Workers operating a chain pump">
       <div class="cap">
