--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         width: 100%; /* Ensure the title spans the full width */
         text-align: center; /* Center the title */
       }
+       .what {
+        color: white;
+        position: relative;
+        width: 100%;
+       }
       .imagecap {
         display: flex;
         flex-direction: column;
@@ -64,11 +69,11 @@
     </div>
     <div class="what">
       <h2>What is the chain pump?</h2>
-      <p>Chain pumps is totally my new invention.</p>
+      <p>Chain pumps is totally my new invention. It consists of square boards rotating on a </p>
     <div class="imagecap">
       <img src="https://ia601300.us.archive.org/25/items/img-0714_20250305/IMG_0714.jpeg" alt="Workers operating a chain pump">
       <div class="cap">
-        <p>Workers operating a chain pump.</p>
+        <p>This is what the chain pump looks like. Animals or people can drive pedals to rotate the chain.</p>
       </div>
     </div>
   </body>
