--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <div class="what">
       <h2>What is the chain pump?</h2>
-      <p>Chain pumps is totally my new invention. It consists of square boards rotating on a </p>
+      <p>Chain pumps is totally my new invention. It consists of square boards rotating on a circlular chain.</p>
     <div class="imagecap">
       <img src="https://ia601300.us.archive.org/25/items/img-0714_20250305/IMG_0714.jpeg" alt="Workers operating a chain pump">
       <div class="cap">
