--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         color: white;
         position: relative;
         width: 100%;
+         text-wrap: wrap;
        }
       .imagecap {
         display: flex;
@@ -70,6 +71,9 @@
     <div class="what">
       <h2>What is the chain pump?</h2>
       <p>Chain pumps is totally my new invention. It consists of square boards rotating on a circlular chain.</p>
+    <h2>Why is this important?</h2>
+      <p>Farmers used to have to pull water with buckets before this innovation.</p>
+    </div>
     <div class="imagecap">
       <img src="https://ia601300.us.archive.org/25/items/img-0714_20250305/IMG_0714.jpeg" alt="Workers operating a chain pump">
       <div class="cap">
