--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         position: relative;
         width: 100%;
          text-wrap: wrap;
+         margin-left: 30px;
        }
       .imagecap {
         display: flex;
@@ -39,6 +40,7 @@
         margin-top: 5px; /* Add space between image and caption */
         animation: a 2.5s ease-out;
         margin-right: 4px;
+        text-wrap: wrap;
       }
       img {
         max-width: 100%; /* Ensure the image doesn't overflow */
@@ -71,8 +73,8 @@
     <div class="what">
       <h2>What is the chain pump?</h2>
       <p>Chain pumps is totally my new invention. It consists of square boards rotating on a circlular chain.</p>
-    <h2>Why is this important?</h2>
-      <p>Farmers used to have to pull water with buckets before this innovation.</p>
+    <h2>Why is this important, and how does it work?</h2>
+      <p>Farmers used to have to pull water with buckets before this innovation. With this tool, they only need manpower for pulling a pedal, which rotates everything on the chain, and the square boards trap water, which is emptied into an irrigation ditch.</p>
     </div>
     <div class="imagecap">
       <img src="https://ia601300.us.archive.org/25/items/img-0714_20250305/IMG_0714.jpeg" alt="Workers operating a chain pump">
