--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     <div class="what">
       <h2>What is the Chain Pump?</h2>
       <p>
-        The chain pump is an ancient innovation that revolutionized irrigation. It consists of square boards rotating on a circular chain, allowing for efficient water transportation.
+        The chain pump is an innovation that revolutionized irrigation. It consists of square boards rotating on a circular chain, allowing for efficient water transportation.
       </p>
-      <h2>Why is this Important, and How Does it Work?</h2>
+      <h2>Why is this important, and how does it work?</h2>
       <p>
         Before the chain pump, farmers had to manually pull water using buckets. This invention simplified the process by requiring only manpower to operate a pedal, which rotates the chain. The square boards trap water, which is then emptied into an irrigation ditch, significantly improving agricultural efficiency.
       </p>
