--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     body {
       min-height: 200vh;
-      background: linear-gradient(-45deg, #1a1a2e, #16213e, #0f3460, #16213e);
+      background: radial-gradient(circle, #0f0c29, #1a1a2e, #16213e);
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
-      font-family: 'Poppins', sans-serif;
-      color: white;
+      font-family: 'Orbitron', sans-serif;
+      color: #00ffcc;
       overflow-x: hidden;
       user-select: none;
       scrollbar-width: none; /* For Firefox */
@@ -41,6 +41,16 @@
       100% { background-position: 0% 50%; }
     }
 
+    /* Glitch Effect */
+    @keyframes glitch {
+      0% { transform: translate(0); }
+      20% { transform: translate(-5px, 5px); }
+      40% { transform: translate(5px, -5px); }
+      60% { transform: translate(-5px, 5px); }
+      80% { transform: translate(5px, -5px); }
+      100% { transform: translate(0); }
+    }
+
     /* Title Styling */
     .h1 {
       text-align: center;
@@ -48,17 +58,17 @@
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 1s ease, transform 1s ease;
-      word-wrap: break-word; /* Text wrapping */
+      word-wrap: break-word;
     }
 
     .h1 h1 {
       font-size: 4rem;
       font-weight: 700;
-      background: linear-gradient(45deg, #e94560, #00bcd4);
+      background: linear-gradient(45deg, #00ffcc, #ff00ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-      animation: float 3s ease-in-out infinite;
+      text-shadow: 0 0 10px #00ffcc, 0 0 20px #ff00ff, 0 0 30px #ff00ff;
+      animation: float 3s ease-in-out infinite, glitch 2s infinite;
     }
 
     @keyframes float {
@@ -74,16 +84,16 @@
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 1s ease, transform 1s ease;
-      word-wrap: break-word; /* Text wrapping */
+      word-wrap: break-word;
     }
 
     .what h2 {
       font-size: 2.5rem;
       font-weight: 600;
       margin-bottom: 20px;
-      color: #00bcd4;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-      word-wrap: break-word; /* Text wrapping */
+      color: #00ffcc;
+      text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
+      word-wrap: break-word;
     }
 
     .what p {
@@ -91,7 +101,7 @@
       line-height: 1.8;
       color: #f0f0f0;
       margin-bottom: 20px;
-      word-wrap: break-word; /* Text wrapping */
+      word-wrap: break-word;
     }
 
     /* Image and Caption Styling */
@@ -103,32 +113,32 @@
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 1s ease, transform 1s ease;
-      word-wrap: break-word; /* Text wrapping */
+      word-wrap: break-word;
     }
 
     .imagecap img {
       max-width: 100%;
       height: auto;
       border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 10px 30px rgba(0, 255, 204, 0.5);
       transition: transform 0.5s ease, box-shadow 0.5s ease;
-      cursor: pointer; /* Add pointer cursor to indicate clickability */
+      cursor: pointer;
     }
 
     .imagecap img.zoomed {
-      transform: scale(2); /* Zoom effect */
-      z-index: 10; /* Bring the image to the front */
+      transform: scale(2);
+      z-index: 10;
       position: relative;
     }
 
     .imagecap img:hover {
       transform: scale(1.05);
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.7);
+      box-shadow: 0 15px 40px rgba(0, 255, 204, 0.7);
     }
 
     .cap {
       text-align: center;
-      margin-top: 340px; /* Increased margin to move caption further down */
+      margin-top: 340px;
       font-size: 1.1rem;
       color: #f0f0f0;
       font-style: italic;
@@ -157,10 +167,11 @@
       }
 
       .imagecap img.zoomed {
-        transform: scale(1.5); /* Adjust zoom level for smaller screens */
+        transform: scale(1.5);
       }
     }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="h1">
