--- a/index.html
+++ b/index.html
@@ -51,6 +51,25 @@
       100% { transform: translate(0); }
     }
 
+    /* Background Animation */
+    @keyframes floating {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+      100% { transform: translateY(0); }
+    }
+
+    .floating-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background: url('https://www.transparenttextures.com/patterns/dark-geometric.png');
+      opacity: 0.2;
+      animation: floating 6s ease-in-out infinite;
+    }
+
     /* Title Styling */
     .h1 {
       text-align: center;
@@ -114,6 +133,7 @@
       transform: translateY(50px);
       transition: opacity 1s ease, transform 1s ease;
       word-wrap: break-word;
+      position: relative;
     }
 
     .imagecap img {
@@ -125,20 +145,14 @@
       cursor: pointer;
     }
 
-    .imagecap img.zoomed {
-      transform: scale(2);
-      z-index: 10;
-      position: relative;
-    }
-
     .imagecap img:hover {
-      transform: scale(1.05);
+      transform: scale(2.5);
       box-shadow: 0 15px 40px rgba(0, 255, 204, 0.7);
     }
 
     .cap {
       text-align: center;
-      margin-top: 340px;
+      margin-top: 20px;
       font-size: 1.1rem;
       color: #f0f0f0;
       font-style: italic;
@@ -165,15 +179,12 @@
       .what p {
         font-size: 1rem;
       }
-
-      .imagecap img.zoomed {
-        transform: scale(1.5);
-      }
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="floating-bg"></div>
   <div class="h1">
     <h1>Chain Pumps in the Han Dynasty</h1>
   </div>
@@ -214,17 +225,12 @@
     window.addEventListener('scroll', () => {
       const scrollY = window.scrollY;
       const h1 = document.querySelector('.h1 h1');
-      const image = document.querySelector('.imagecap img');
+      const what = document.querySelector('.what');
+      const imagecap = document.querySelector('.imagecap');
 
       h1.style.transform = `translateY(${scrollY * 0.5}px)`;
-      image.style.transform = `translateY(${scrollY * 0.3}px)`;
-    });
-
-    // Image Zoom on Click
-    const image = document.querySelector('.imagecap img');
-    image.addEventListener('click', () => {
-      console.log('Image clicked!'); // Debugging: Check if the click event is firing
-      image.classList.toggle('zoomed');
+      what.style.transform = `translateY(${scrollY * 0.3}px)`;
+      imagecap.style.transform = `translateY(${scrollY * 0.2}px)`;
     });
   </script>
 </body>
