--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
       <p>This is what the chain pump looks like. Animals or people can drive pedals to rotate the chain.</p>
     </div>
   </div>
-
+<audio controls autoplay loop>
+  <source src="https://ia600807.us.archive.org/35/items/chinese-music-imperial-dynasty-ezmp-3.cc/Chinese%20Music%20–%20Imperial%20Dynasty%20%5B%20ezmp3.cc%20%5D.mp3">
+</audio>
   <script>
     // Scroll Animation
     const fadeElements = document.querySelectorAll('.h1, .what, .imagecap');
