--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background: radial-gradient(circle, #0f0c29, #1a1a2e, #16213e);
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Times', sans-serif;
       color: #00ffcc;
       overflow-x: hidden;
       user-select: none;
